tests/parser/error/array_decl_fun_decl.c
int array[435](int x, int y){

}

